# MaintainerGuard

./: .editorconfig  .env.example  .gitignore  .maintainerguard.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  TASK.md  action.yml  maintainerguard_build.py  mg  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  feedback.md  policy_rule_request.md  scanner_adapter_request.md
.github/workflows/: ci.yml  maintainerguard-issue.yml  maintainerguard-pr.yml  maintainerguard-release.yml
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  getting-started.md  github-automation.md  launch.md  maintainer-policies.md  privacy-and-security.md  public-launch-checklist.md  public-release-checklist.md  report-format.md  roadmap.md  scanner-inputs.md  upgrading-to-v0.3.md
examples/: README.md
examples/configs/: docs.toml  minimal.toml  security.toml  strict.toml
examples/reports/: docs-only.md  (+9 more)
maintainerguard/: __init__.py  ai.py  analysis.py  cli.py  config.py  detectors.py  evidence.py  github.py  issue.py  models.py  noise.py  policies.py  privacy.py  prompts.py  release.py  reports.py  scanners.py
schemas/: issue.schema.json  pull-request.schema.json  release.schema.json  report.schema.json  scanner.schema.json
tests/: test_analysis.py  test_cli.py  test_config.py  test_github.py  test_issue_release.py  test_packaging.py  test_privacy_ai.py  test_reports.py  test_samples.py  test_scanners.py
(+31 files in other folders)
