[build-system]
requires = []
build-backend = "maintainerguard_build"
backend-path = ["."]

[project]
name = "maintainerguard"
version = "0.1.0"
description = "Evidence-first AI maintainer assistant for merge, security, and release readiness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MaintainerGuard contributors" }]
keywords = ["maintainers", "github-actions", "security", "release", "scanner", "open-source"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
maintainerguard = "maintainerguard.cli:main"
mg = "maintainerguard.cli:main"
